--- a/data_display/statis_data_display.ipynb
+++ b/data_display/statis_data_display.ipynb
@@ -4,7 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 统计学\n",
+    "\n",
+    "收集分析解释数据并从数据中得出结论的科学 ---摘自统计学第七版\n",
+    "    \n",
+    "![统计数据类型](./img/data_type.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 数据的图表展示\n",
+    "\n",
+    "![统计数据类型](./img/data_type.jpg)\n",
+    "\n",
     "## 1.数据的预处理"
    ]
   },
