--- a/data_general_measure/stats_data_general_measure.ipynb
+++ b/data_general_measure/stats_data_general_measure.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "# 数据的概括性度量\n",
     "    \n",
-    "![数据的概括性度量](./img/数据的概括性度量.png)"
+    "![数据的概括性度量](./img/data_general_measure.png)"
    ]
   },
   {
