概率与概率分布

--- a/data_display/statis_data_display.ipynb
+++ b/data_display/statis_data_display.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1f6f1a15b38>"
+       "<matplotlib.legend.Legend at 0x2c311402c18>"
       ]
      },
      "execution_count": 18,
@@ -1172,11 +1172,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x1f6f1a95ac8>,\n",
-       "  <matplotlib.patches.Wedge at 0x1f6f1aa2438>,\n",
-       "  <matplotlib.patches.Wedge at 0x1f6f1aa2da0>,\n",
-       "  <matplotlib.patches.Wedge at 0x1f6f1aaf710>,\n",
-       "  <matplotlib.patches.Wedge at 0x1f6f1abe080>],\n",
+       "([<matplotlib.patches.Wedge at 0x2c311483ac8>,\n",
+       "  <matplotlib.patches.Wedge at 0x2c31148f470>,\n",
+       "  <matplotlib.patches.Wedge at 0x2c31148fda0>,\n",
+       "  <matplotlib.patches.Wedge at 0x2c31149e710>,\n",
+       "  <matplotlib.patches.Wedge at 0x2c3114ac080>],\n",
        " [Text(0.7053422663930613, 0.9708204196655013, '碳酸饮料'),\n",
        "  Text(-0.9287607599924327, 0.5894094083896856, '绿茶'),\n",
        "  Text(-0.8018654323526336, -0.7530018780839288, '矿泉水'),\n",
@@ -1341,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1359,7 @@
        "       211, 172, 213], dtype=int64)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1383,7 @@
        "Categories (10, interval[int64]): [(140, 150] < (150, 160] < (160, 170] < (170, 180] ... (200, 210] < (210, 220] < (220, 230] < (230, 240]]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1462,12 +1462,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "x : (n,) array or sequence of (n,) arrays(可以是一个array也可以是多个array)\n",
+    "\n",
+    "integer or array_like or ‘auto’, optional(可以是整型来设置箱子的宽度,也可以是array,指定每个箱子的宽度)\n",
+    "\n",
+    "range : tuple or None, optional(设置显示的范围,范围之外的将被舍弃)\n",
+    "\n",
+    "normed : boolean, optional(?)是否将得到的直方图向量归一化\n",
+    "normed=True表示正则化直方图，即归一化（即求频率）\n",
+    "\n",
+    "weights : (n, ) array_like or None, optional(?)\n",
+    "\n",
+    "cumulative : boolean, optional(?)\n",
+    "\n",
+    "bottom : array_like, scalar, or None(?)\n",
+    "\n",
+    "histtype : {‘bar’, ‘barstacked’, ‘step’, ‘stepfilled’}, optional(选择展示的类型,默认为bar)\n",
+    "\n",
+    "align : {‘left’, ‘mid’, ‘right’}, optional(对齐方式)\n",
+    "\n",
+    "orientation : {‘horizontal’, ‘vertical’}, optional(直方图方向)\n",
+    "\n",
+    "log : boolean, optional(log刻度)\n",
+    "\n",
+    "color : color or array_like of colors or None, optional(颜色设置)\n",
+    "\n",
+    "label : string or None, optional(刻度标签)\n",
+    "\n",
+    "stacked : boolean, optional(?)\n",
+    "\n",
+    "alpha 透明度"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 未数据分组(箱线图)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1516,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1697,7 +1733,7 @@
        "计算机应用基础  85  78  81  95  70  67  82  72  80  81  77"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1708,16 +1744,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f6fa7fb1d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2c31170b518>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1740,16 +1776,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1f6fadf6b38>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2c3117fba20>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1779,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1861,7 +1897,7 @@
        "2010      4941     17104"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1872,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +1917,7 @@
        "Text(0.5, 1.0, '居民消费水平')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1915,7 +1951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1997,7 +2033,7 @@
        "14  110  5800"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2008,16 +2044,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f6fef07c50>"
+       "<matplotlib.collections.PathCollection at 0x2c311826358>"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2047,16 +2083,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f6fe68ecc0>"
+       "<matplotlib.collections.PathCollection at 0x2c31188a978>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2087,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2199,7 +2235,7 @@
        "重庆  6870.2  2228.8  1177.0   1196.0  1101.6  1903.2  1470.6   625.7"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2210,7 +2246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
