--- a/parameter_estimation/parameter_estimation.ipynb
+++ b/parameter_estimation/parameter_estimation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,23 +695,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 均值"
+    "#### 均值 独立样本"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "大样本估计  \n",
     "某地区教育管理部门想估计两所中学的学生高考时的英语平均分数之差, 为此在两所中学独立抽取两个随机样本,有关数据如下，试建立建立两所中学高考英语平均分数之差的95%的置信区间.\n",
-    "中学1 中学2\n",
-    "n1=46 n2=33\n",
-    "x1=86 x2=78\n",
-    "s1=5.8 s2=7.2"
+    "中学1 中学2  \n",
+    "n1=46 n2=33  \n",
+    "x1=86 x2=78  \n",
+    "s1=5.8 s2=7.2  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -737,11 +738,754 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "小样本   \n",
+    "为估计两种方法组装产品所需时间的差异，分别对两种不同的组装方法各随机\n",
+    "安排12名工人，每个工人组装一件产品所需的时间(单位：min)下如表,假定两种方法组装产品的时间服从正态分布，且方差相等。试以95%的置信水平建立两种方法组装产品所需平均时间差值的置信区间"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>方法1</th>\n",
+       "      <th>方法2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>28.3</td>\n",
+       "      <td>27.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30.1</td>\n",
+       "      <td>22.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>31.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>37.6</td>\n",
+       "      <td>33.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32.1</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>28.8</td>\n",
+       "      <td>30.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>36.0</td>\n",
+       "      <td>31.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>37.2</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>38.5</td>\n",
+       "      <td>32.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>34.4</td>\n",
+       "      <td>31.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>28.0</td>\n",
+       "      <td>33.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>30.0</td>\n",
+       "      <td>26.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     方法1   方法2\n",
+       "0   28.3  27.6\n",
+       "1   30.1  22.2\n",
+       "2   29.0  31.0\n",
+       "3   37.6  33.8\n",
+       "4   32.1  20.0\n",
+       "5   28.8  30.2\n",
+       "6   36.0  31.7\n",
+       "7   37.2  26.0\n",
+       "8   38.5  32.0\n",
+       "9   34.4  31.2\n",
+       "10  28.0  33.4\n",
+       "11  30.0  26.5"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data3 = pd.read_excel('data/例7.7.xlsx',sep='\\t',header=0)\n",
+    "data3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean1 = data3.iloc[:,0].mean()\n",
+    "mean2 = data3.iloc[:,1].mean()\n",
+    "std1 =data3.iloc[:,0].var()\n",
+    "std2 = data3.iloc[:,1].var()\n",
+    "size = len(data3)\n",
+    "size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.677272727272726"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s2p=((size-1)*std1+(size-1)*std2)/(size+size-2)\n",
+    "s2p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.073873067904015"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t=stats.t.isf(0.05/2,22)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.559706386046247"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rang = t*(s2p*(1/size+1/size))**.5\n",
+    "rang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.14029361395375606,7.25970638604625]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"[\"+str((mean1-mean2)-rang)+\",\"+str((mean1-mean2)+rang)+\"]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " 沿用例 7.7 的数据,假定第一种方法随机安排 12 个工人,第二种方法随机安排8个工人,即n1=12,, n2=8。假设方差不等。求95%置信区间。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mean1 = data3.iloc[:,0].mean()\n",
+    "mean2 = data3.iloc[0:8,1].mean()\n",
+    "var1 =data3.iloc[:,0].var()\n",
+    "var2 = data3.iloc[0:8,1].var()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13.137509181318418"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v=(var1/12+var2/8)**2/((var1/12)**2/11+(var2/8)**2/7)\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.1580722875021703"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t = stats.t.isf(0.05/2,v)\n",
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.442792422433666"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rang = t*((var1/size+var2/8))**.5\n",
+    "rang"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.24470757756633787,9.13029242243367]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"[\"+str((mean1-mean2)-rang)+\",\"+str((mean1-mean2)+rang)+\"]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 均值 匹配样本"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "有由10名学生组成的一个随机样本，让他们分别采用A和B两套数学试卷进行测试，数据如下。假定分数差服从正太分布，建立95%的差的置信区间"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>学生编号</th>\n",
+       "      <th>试卷A</th>\n",
+       "      <th>试卷B</th>\n",
+       "      <th>差值d</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>78</td>\n",
+       "      <td>71</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>63</td>\n",
+       "      <td>44</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>72</td>\n",
+       "      <td>61</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>89</td>\n",
+       "      <td>84</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>91</td>\n",
+       "      <td>74</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>49</td>\n",
+       "      <td>51</td>\n",
+       "      <td>-2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>68</td>\n",
+       "      <td>55</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>76</td>\n",
+       "      <td>60</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>85</td>\n",
+       "      <td>77</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>55</td>\n",
+       "      <td>39</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   学生编号  试卷A  试卷B  差值d\n",
+       "0     1   78   71    7\n",
+       "1     2   63   44   19\n",
+       "2     3   72   61   11\n",
+       "3     4   89   84    5\n",
+       "4     5   91   74   17\n",
+       "5     6   49   51   -2\n",
+       "6     7   68   55   13\n",
+       "7     8   76   60   16\n",
+       "8     9   85   77    8\n",
+       "9    10   55   39   16"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data4 = pd.read_excel('data/例7.9.xlsx',sep='\\t',header=0)\n",
+    "data4 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dmean = data4.iloc[:,3].mean()\n",
+    "dmean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.531972647421808"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = data4.iloc[:,3].std()\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = len(data4)\n",
+    "t = stats.t.isf(0.05/2,l)\n",
+    "r = t*s/l**0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.39757617776111,15.60242382223889]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"[\"+str(dmean-r)+\",\"+str(dmean+r)+\"]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 比例之差的区间估计"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "在某个电视节目的收视率调查中,从农村随机调查了 400 人,有 32%的人收看了该节 目;从城市随机调查了 500 人。有 45%的人收看了该节目,试以 95%的置信水平估计城市与农村收视率之差的置信区间"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p1 = .45\n",
+    "p2 = .32\n",
+    "p = p1-p2\n",
+    "r= 1.96*(p1*(1-p1)/500+p2*(1-p2)/400)**.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.06682229507175812,0.19317770492824188]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"[\"+str(p-r)+\",\"+str(p+r)+\"]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 方差比的区间估计"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "为研究男女学生在生活费支出(单位:元)上的差异,在某大学各抽取25名男学生和女学生，得到下面的结果：  \n",
+    "男学生：均值520 方差：260  \n",
+    "女学生：均值480 方差：280   \n",
+    "试以90%的置信水平估计男女学生生活费支出方差比的置信区间  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.983759568489613"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = stats.f.isf(0.05,24,24)\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5040933467362559"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1a = 1/f\n",
+    "f1a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4680866791122377,1.8420624564546408]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"[\"+str((260/280/f))+\",\"+str(260/280/f1a)+\"]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 表格\n",
+    "![table1](./img/table1.jpg)\n",
+    "![table2](./img/table2.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 样本量"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 均值"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "拥有工商管理学士学位的大学毕业生年薪的标准差大约为2000元,假定想 拥有工商管理学士学位的大学毕业生年薪的标准差大约为2000元,假定想要以95%的置信水平估计年薪的置信区间，希望误差为400元，应抽取多少样本"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96.03999999999999"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n=1.96**2*2000**2/400**2\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "根据以往的生产统计,某种产品的合格率约为 90%,现要求边际误差为 5%,在求置信水平为 95%的置信区间 时,应抽取多少个产品作为样本"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "138.29759999999993"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi = .9\n",
+    "z=1.96\n",
+    "E=.05\n",
+    "n=((1.96**2)*((1-pi)*pi))/(E**2)\n",
+    "n"
+   ]
   }
  ],
  "metadata": {
