方差分析和线性回归开始

--- a/data_display/statis_data_display.ipynb
+++ b/data_display/statis_data_display.ipynb
@@ -1129,7 +1129,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2c311402c18>"
+       "<matplotlib.legend.Legend at 0x1b4b3121a58>"
       ]
      },
      "execution_count": 18,
@@ -1172,11 +1172,11 @@
     {
      "data": {
       "text/plain": [
-       "([<matplotlib.patches.Wedge at 0x2c311483ac8>,\n",
-       "  <matplotlib.patches.Wedge at 0x2c31148f470>,\n",
-       "  <matplotlib.patches.Wedge at 0x2c31148fda0>,\n",
-       "  <matplotlib.patches.Wedge at 0x2c31149e710>,\n",
-       "  <matplotlib.patches.Wedge at 0x2c3114ac080>],\n",
+       "([<matplotlib.patches.Wedge at 0x1b4b31a39e8>,\n",
+       "  <matplotlib.patches.Wedge at 0x1b4b31b1390>,\n",
+       "  <matplotlib.patches.Wedge at 0x1b4b31b1cc0>,\n",
+       "  <matplotlib.patches.Wedge at 0x1b4b31be630>,\n",
+       "  <matplotlib.patches.Wedge at 0x1b4b31bef60>],\n",
        " [Text(0.7053422663930613, 0.9708204196655013, '碳酸饮料'),\n",
        "  Text(-0.9287607599924327, 0.5894094083896856, '绿茶'),\n",
        "  Text(-0.8018654323526336, -0.7530018780839288, '矿泉水'),\n",
@@ -1750,7 +1750,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2c31170b518>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1b4b33fef98>"
       ]
      },
      "execution_count": 30,
@@ -1782,7 +1782,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2c3117fba20>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1b4b342c710>"
       ]
      },
      "execution_count": 31,
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2033,7 +2033,7 @@
        "14  110  5800"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2044,16 +2044,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2c311826358>"
+       "<matplotlib.collections.PathCollection at 0x1b4b3657ac8>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2089,7 +2089,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2c31188a978>"
+       "<matplotlib.collections.PathCollection at 0x1b4b35a9940>"
       ]
      },
      "execution_count": 38,
