--- a/hypothesis_testing/hypothesis_testing.ipynb
+++ b/hypothesis_testing/hypothesis_testing.ipynb
@@ -1293,8 +1293,7 @@
    "source": [
     "# 人体的温度是否服从正态分布\n",
     "# 假设符合正态分布\n",
-    "import seaborn as sns\n",
-    "sns.distplot(temperature)"
+    "0"
    ]
   },
   {
@@ -1314,7 +1313,7 @@
     }
    ],
    "source": [
-    "stats.kstest(temperature,'norm')"
+    "000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000stats.kstest(temperature,'norm')"
    ]
   },
   {
