--- a/linear_regression/linear_regression.ipynb
+++ b/linear_regression/linear_regression.ipynb
@@ -1183,7 +1183,7 @@
    ],
    "source": [
     "SSR = sum((y_pred - y.mean())**2)\n",
-    "F = SSR/4 /(SSE/(n-4-1))\n",
+    "F = \n",
     "F"
    ]
   },
@@ -1240,58 +1240,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def t(beta,x):\n",
-    "    return beta/(Se/(sum(x**2)-1/n*(sum(x)**2))**.5)"
+    "def Sbeta(x):\n",
+    "    return Se/(sum(x**2)-1/n*(sum(x)**2))**.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "8.860216776029759"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8.860216776029759\n",
+      "2.5827419414471704\n",
+      "0.3426631396725414\n",
+      "-3.229947568539647\n"
+     ]
     }
    ],
    "source": [
-    "t1 =t(model.coef_[1],index1)\n",
-    "t1"
+    "t1 =model.coef_[1]/Sbeta(index1)\n",
+    "t2 =model.coef_[2]/Sbeta(index2)\n",
+    "t3 =model.coef_[3]/Sbeta(index3)\n",
+    "t4 =model.coef_[4]/Sbeta(index4)\n",
+    "print(t1)\n",
+    "print(t2)\n",
+    "print(t3)\n",
+    "print(t4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.9924515465819136e-26"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Se/(sum(index1**2)- (index1.sum()**2)/n)**5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -1300,33 +1286,134 @@
        "154933.57440000022"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(index1**2) - 1/25 * sum(index1)**2"
+    "t1 =model.coef_[1]/Sbeta(index1)\n",
+    "t1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8.860216776029757"
+       "516543.37000000005"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.coef_[1]*154933.57440000022**.5/Se"
+    "(index1**2).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "361609.7955999997"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(sum(index1))**2/n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "154933.57440000033"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "516543.37000000005- 361609.7955999997"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "393.6160240640621"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "154933.57440000033**.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.004501849243087731"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1.772/393.6160240640621"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.885237563522846"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.04/0.004501849243087731"
    ]
   },
   {
