--- a/variance_analysis/variance_analysis.ipynb
+++ b/variance_analysis/variance_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "6   44   NaN   NaN    NaN"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,6 +160,13 @@
    "source": [
     "x_ = data.mean()\n",
     "x_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![x__](img/x__.jpg)"
    ]
   },
   {
@@ -571,11 +578,641 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 双因素方差分析\n",
+    "### 无交互作用分析"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>地区1</th>\n",
+       "      <th>地区2</th>\n",
+       "      <th>地区3</th>\n",
+       "      <th>地区4</th>\n",
+       "      <th>地区5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>品牌1</th>\n",
+       "      <td>365</td>\n",
+       "      <td>350</td>\n",
+       "      <td>343</td>\n",
+       "      <td>340</td>\n",
+       "      <td>323</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>品牌2</th>\n",
+       "      <td>345</td>\n",
+       "      <td>368</td>\n",
+       "      <td>363</td>\n",
+       "      <td>330</td>\n",
+       "      <td>333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>品牌3</th>\n",
+       "      <td>358</td>\n",
+       "      <td>323</td>\n",
+       "      <td>353</td>\n",
+       "      <td>343</td>\n",
+       "      <td>308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>品牌4</th>\n",
+       "      <td>288</td>\n",
+       "      <td>280</td>\n",
+       "      <td>298</td>\n",
+       "      <td>260</td>\n",
+       "      <td>298</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     地区1  地区2  地区3  地区4  地区5\n",
+       "品牌1  365  350  343  340  323\n",
+       "品牌2  345  368  363  330  333\n",
+       "品牌3  358  323  353  343  308\n",
+       "品牌4  288  280  298  260  298"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel(\"data/例10.3.xlsx\",header=1, usecols=[1,2,3,4,5,6],index_col= 0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![10-1](img/10-1.jpg)\n",
+    "\n",
+    "#### 构造统计量\n",
+    "\n",
+    "![10-2](img/10-2.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "328.45"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = df.shape[0]\n",
+    "r = df.shape[1]\n",
+    "data = df.values\n",
+    "x__ =  data.sum().sum()/(data.shape[0]*data.shape[1])\n",
+    "x__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17888.95"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SST = sum((data - x__)**2).sum()\n",
+    "SST"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![10-3](img/10-3.jpg)\n",
+    "![10-4](img/10-4.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13004.549999999996"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSR = sum(((df.sum(axis=1).values/data.shape[1] - x__)**2)*data.shape[1])\n",
+    "SSR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2011.7"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSC =  sum(((df.sum()/data.shape[0] - x__)**2)*data.shape[0])\n",
+    "SSC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2872.7000000000053"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSE = SST -SSR - SSC\n",
+    "SSE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![10-5](img/10-5.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4334.8499999999985"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MSR = SSR/(data.shape[0]-1)\n",
+    "MSR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "502.925"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MSC = SSC/(data.shape[1]-1)\n",
+    "MSC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "239.3916666666671"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MSE = SSE/(data.shape[0]-1)/(data.shape[1]-1)\n",
+    "MSE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fr:18.107773175061748\n",
+      "Fc:2.1008458941065857\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fr = MSR/MSE\n",
+    "Fc = MSC/MSE\n",
+    "print(\"Fr:\"+str(Fr))\n",
+    "print(\"Fc:\"+str(Fc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Far:3.490294819497605\n",
+      "Fac:3.259166726901249\n"
+     ]
+    }
+   ],
+   "source": [
+    "#95%置信度下\n",
+    "alpha = 0.05\n",
+    "Far = stats.f.isf(alpha, dfn=k-1, dfd=(k-1)*(r-1))   #行 F临界值\n",
+    "Fac = stats.f.isf(alpha, dfn=r-1, dfd=(k-1)*(r-1))   #行 F临界值\n",
+    "print(\"Far:\"+str(Far))\n",
+    "print(\"Fac:\"+str(Fac))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fr>Far\n",
+    "所以拒绝原假设，行因素，品牌因素对销售量有明显的影响"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fc>Fac 不拒绝原假设，列因素，不能认为地区对销售量有影响"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pfr:9.456152887730434e-05\n",
+      "pfc:0.14366488731130558\n"
+     ]
+    }
+   ],
+   "source": [
+    "pfr = stats.f.sf(Fr, k-1, (k-1)*(r-1))  # 行变量 统计量F的P值\n",
+    "pfc = stats.f.sf(Fc, r-1, (k-1)*(r-1))  # 列变量 统计量F的P值\n",
+    "print(\"pfr:\"+str(pfr))\n",
+    "print(\"pfc:\"+str(pfc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pfr<0.05  \n",
+    "pfr>0.05 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8394148342971497"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RR = (SSR+SSC)/SST\n",
+    "RR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9161958493123343"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R = RR**.5\n",
+    "R"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "品牌和地区合起来总共解释了销售差异的83.94%，R表明两者和销售量有明显关系\n",
+    "#### 总结\n",
+    "![10-6](img/10-6.jpg)\n",
+    "### 有交互作用的方差分析\n",
+    "城市道路交通管理部门为了研究不同的路段和不同的时间段对行车时间的影响，,让一名交通警察分别在两个路段和高峰期 与非高峰期亲自驾车进行试验,通过试验共获得 20个行车时间(单位:m:分钟)的数据。试分析影响a=0.05\n",
+    "![10-7](img/10-7.jpg)\n",
+    "![10-8](img/10-8.jpg)\n",
+    "![10-9](img/10-9.jpg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>路段1</th>\n",
+       "      <th>路段2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>27</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>25</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>25</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   路段1  路段2\n",
+       "1   26   19\n",
+       "2   24   20\n",
+       "3   27   23\n",
+       "4   25   22\n",
+       "5   25   21"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_excel(\"data/例10.5.xlsx\",header=0,index_col=0)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.25"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 2\n",
+    "r = 2\n",
+    "m = 5\n",
+    "n = df.shape[0]*df.shape[1]\n",
+    "x__ =  df.values.sum()/n\n",
+    "x__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[23.2, 23.2]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "174.0499999999999"
+      ]
+     },
+     "execution_count": 209,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1 = df[0:5]\n",
+    "d2 = df[5:]\n",
+    "dataMean = [d1.mean().mean(),d1.mean().mean()]\n",
+    "print(dataMean)\n",
+    "SST = sum((dataMean-x__)**2).sum()*r*m\n",
+    "SST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22.4, 18.1])"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataMean1 = df.mean(axis=0).values\n",
+    "dataMean1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "92.44999999999989"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSC = sum((dataMean1-x__)**2).sum()*k*m\n",
+    "SSC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "133.2499999999999"
+      ]
+     },
+     "execution_count": 228,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_ = df.values.mean()\n",
+    "SSRC = sum((x_ - dataMean -dataMean1 +x__ )**2)*m\n",
+    "SSRC"
+   ]
   }
  ],
  "metadata": {
